--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,42 @@
-# Virtualenv
+# Next.js
+.next/
+out/
+node_modules/
+.vercel/
+
+# Python
 venv/
 env/
 ENV/
-.venv/
-
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*.swn
-*.pyc
 __pycache__/
-.DS_Store
+*.py[cod]
+*.class
+*.egg-info/
+dist/
+build/
+.Python
 
 # Database
 *.db
 *.sqlite
 data/
 
-# Streamlit
-.streamlit/
-.streamlit/secrets.toml
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
 
-# Python
-*.py[cod]
-*$py.class
-*.egg-info/
-dist/
-build/
-
-# Environment variables
+# Environment
 .env
 .env.local
+.env.*.local
 
 # OS
-Thumbs.db
 .DS_Store
+Thumbs.db
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
